unpackaged/main/default/objects/pse__Assignment__c/fields/Assignment_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <inlineHelpText>Site contact person for this assignment.  If a name is not available, it first must be added as a Contact at the Account level</inlineHelpText>
    <label>Assignment Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assignments (Technical Contact)</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>