unpackaged/main/default/objects/pse__Assignment__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <inlineHelpText>Type of billable or non-billable assignment</inlineHelpText>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable-Premium</fullName>
            </value>
            <value>
                <fullName>Billable-Standard</fullName>
            </value>
            <value>
                <fullName>Billable-Expert Premium</fullName>
            </value>
            <value>
                <fullName>Billable-Expert Standard</fullName>
            </value>
            <value>
                <fullName>Free of Charge-Donated</fullName>
            </value>
            <value>
                <fullName>Free of Charge-Other</fullName>
            </value>
            <value>
                <fullName>Consultant Travel Time</fullName>
            </value>
            <value>
                <fullName>Customer Training</fullName>
            </value>
            <value>
                <fullName>Assistance/Mentor/Job Shadow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>