unpackaged/main/default/objects/pse__Assignment__c/fields/AssignmentColor__c.field-meta.xml
<CustomField>
    <fullName>AssignmentColor__c</fullName>
    <formula>IF( pse__Is_Billable__c , "lightGreen", "Beige")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Color</label>
    <type>Text</type>
</CustomField>