unpackaged/main/default/objects/pse__Assignment__c/fields/Days_Since_Opportunity_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Opportunity_Close__c</fullName>
    <formula>TODAY() - Opportunity_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Opportunity Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>