unpackaged/main/default/objects/pse__Assignment__c/fields/DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryType__c</fullName>
    <inlineHelpText>Identifies work being delivered by Consultants outside of their country of residence. (Comparison of Project Region to Country of Residence on the Resource's PSA Contact record.)</inlineHelpText>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Country Delivery</fullName>
            </value>
            <value>
                <fullName>Out of Country Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>