unpackaged/main/default/objects/pse__Assignment__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>