unpackaged/main/default/objects/pse__Assignment__c/fields/Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Scheduled_Hours__c - pse__Billable_Hours_Submitted__c - pse__Non_Billable_Hours_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Assigned/ scheduled hours minus approved timecard hours for the assignment</inlineHelpText>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>