unpackaged/main/default/objects/pse__Assignment__c/fields/Invoice_Rule__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rule__c</fullName>
    <inlineHelpText>Indicates the billing method</inlineHelpText>
    <label>Invoice Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Billing / Deferred Revenue</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials Billing</fullName>
            </value>
            <value>
                <fullName>Milestone Billing</fullName>
            </value>
            <value>
                <fullName>Periodic Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>