unpackaged/main/default/objects/pse__Assignment__c/fields/Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Amount__c</fullName>
    <formula>pse__Milestone__r.pse__Milestone_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>