unpackaged/main/default/objects/pse__Assignment__c/fields/NSP__c.field-meta.xml
<CustomField>
    <fullName>NSP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if this sale included an NSP discount</inlineHelpText>
    <label>NSP</label>
    <type>Checkbox</type>
</CustomField>