unpackaged/main/default/objects/pse__Assignment__c/fields/NSP_Revenue_Rate__c.field-meta.xml
<CustomField>
    <fullName>NSP_Revenue_Rate__c</fullName>
    <label>NSP Revenue Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>