unpackaged/main/default/objects/pse__Assignment__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <formula>pse__Project__r.pse__Opportunity__r.CloseDate</formula>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>