unpackaged/main/default/objects/pse__Assignment__c/fields/Oracle_Sub_Cases__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Sub_Cases__c</fullName>
    <inlineHelpText>Oracle Sub-case ID.  Manually updated</inlineHelpText>
    <label>Oracle Sub-Cases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>