unpackaged/main/default/objects/pse__Assignment__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <inlineHelpText>Choose the most representative option</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAM-WAM</fullName>
            </value>
            <value>
                <fullName>AAM-WOM</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>AFM</fullName>
            </value>
            <value>
                <fullName>APM</fullName>
            </value>
            <value>
                <fullName>ARX</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>Big-IQ-App</fullName>
            </value>
            <value>
                <fullName>Big-IQ-Cloud</fullName>
            </value>
            <value>
                <fullName>Big-IQ-Device</fullName>
            </value>
            <value>
                <fullName>Big-IQ-Security</fullName>
            </value>
            <value>
                <fullName>CGNAT</fullName>
            </value>
            <value>
                <fullName>Consulting On Demand</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>Fire Pass</fullName>
            </value>
            <value>
                <fullName>GTM</fullName>
            </value>
            <value>
                <fullName>iControl</fullName>
            </value>
            <value>
                <fullName>iRules</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>LTM</fullName>
            </value>
            <value>
                <fullName>OPT</fullName>
            </value>
            <value>
                <fullName>PEM</fullName>
            </value>
            <value>
                <fullName>RE-CERT</fullName>
            </value>
            <value>
                <fullName>Traffix</fullName>
            </value>
            <value>
                <fullName>Versafe</fullName>
            </value>
            <value>
                <fullName>Viprion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>