unpackaged/main/default/objects/pse__Assignment__c/fields/PSA_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>PSA_Project_Manager__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__r.FullName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA Project Manager</label>
    <type>Text</type>
</CustomField>