unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Location__c.field-meta.xml
<CustomField>
    <fullName>pse__Location__c</fullName>
    <inlineHelpText>Physical location of the assignment</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS-ALABAMA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-ALASKA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-ARIZONA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-ARKANSAS</fullName>
            </value>
            <value>
                <fullName>AMERICAS-BRAZIL</fullName>
            </value>
            <value>
                <fullName>AMERICAS-CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-CANADA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-CARIBBEAN</fullName>
            </value>
            <value>
                <fullName>AMERICAS-COLORADO</fullName>
            </value>
            <value>
                <fullName>AMERICAS-CONNECTICUT</fullName>
            </value>
            <value>
                <fullName>AMERICAS-DELAWARE</fullName>
            </value>
            <value>
                <fullName>AMERICAS-DISTRICT OF COLUMBIA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-FLORIDA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-GEORGIA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-HAWAII</fullName>
            </value>
            <value>
                <fullName>AMERICAS-IDAHO</fullName>
            </value>
            <value>
                <fullName>AMERICAS-ILLINOIS</fullName>
            </value>
            <value>
                <fullName>AMERICAS-INDIANA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-IOWA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-KANSAS</fullName>
            </value>
            <value>
                <fullName>AMERICAS-KENTUCKY</fullName>
            </value>
            <value>
                <fullName>AMERICAS-LOUISIANA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-MAINE</fullName>
            </value>
            <value>
                <fullName>AMERICAS-MARYLAND</fullName>
            </value>
            <value>
                <fullName>AMERICAS-MASSACHUSETTS</fullName>
            </value>
            <value>
                <fullName>AMERICAS-MEXICO</fullName>
            </value>
            <value>
                <fullName>AMERICAS-MICHIGAN</fullName>
            </value>
            <value>
                <fullName>AMERICAS-MINNESOTA</fullName>
            </value>
            <value>
                <fullName>AMERICAS-MISSISSIPPI</fullName>
            </value>
            <value>
                <fullName>AMERICAS-MISSOURI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>