unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Role__c</fullName>
    <inlineHelpText>Job role for the consultant or PM on this assignment</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Principal Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>