unpackaged/main/default/objects/pse__Assignment__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <inlineHelpText>Status must be set to 'Scheduled' for Assignment to display in list of available Project/Assignments within Time Entry. Billable Resources will be unable to see/submit Time Cards when Assignment Status is 'Tentative', Closed', or 'Canceled'.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tentative</fullName>
                <default>true</default>
                <label>Tentative</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>