unpackaged/main/default/objects/pse__Assignment__c/fields/Resource_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Full_Name__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Resource__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Full Name</label>
    <type>Text</type>
</CustomField>