unpackaged/main/default/objects/pse__Assignment__c/fields/SARK_Key__c.field-meta.xml
<CustomField>
    <fullName>SARK_Key__c</fullName>
    <inlineHelpText>For this assignment only</inlineHelpText>
    <label>SARK Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>