unpackaged/main/default/objects/pse__Assignment__c/fields/Services_Product__c.field-meta.xml
<CustomField>
    <fullName>Services_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <inlineHelpText>SKU associated with the assignment</inlineHelpText>
    <label>Services Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>