unpackaged/main/default/objects/pse__Assignment__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Project__r.Theater__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated based on Region. If Top level Region is selected (Americas, EMEA, APCJ), Theater will be blank.</inlineHelpText>
    <label>Theater</label>
    <type>Text</type>
</CustomField>