unpackaged/main/default/objects/pse__Assignment__c/fields/Time_Expense_Approver__c.field-meta.xml
<CustomField>
    <fullName>Time_Expense_Approver__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__r.FullName__c</formula>
    <inlineHelpText>Formerly 'Project Manager' Field; see replacement 'PSA Project Manager' to identify PM/PC.
Use this Field to identify User to receive/approve TC+Expense Notifications. 
Biz Rule: Approver = PM if PM managed, otherwise Approver = Regional Delivery Mgr.</inlineHelpText>
    <label>Time &amp; Expense Approver</label>
    <type>Text</type>
</CustomField>