unpackaged/main/default/objects/pse__Assignment__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Formula field to pull the Time Zone entered on the Project onto the Assignment record.</description>
    <formula>TEXT(pse__Project__r.pse__Time_Zone__c)</formula>
    <inlineHelpText>Primary Customer Contact Time Zone</inlineHelpText>
    <label>Customer Time Zone</label>
    <type>Text</type>
</CustomField>