unpackaged/main/default/objects/pse__Assignment__c/recordTypes/Assignment_Standard.recordType-meta.xml
<RecordType>
    <fullName>Assignment_Standard</fullName>
    <active>true</active>
    <description>Record Type for Billable, Revenue generating Assignments on Customer Projects. Billable Assignments are always Time Credited, contributing to Productive Utilization.</description>
    <label>Billable (Customer Project)</label>
</RecordType>