unpackaged/main/default/objects/pse__Assignment__c/recordTypes/NonBillable_Customer_Project.recordType-meta.xml
<RecordType>
    <fullName>NonBillable_Customer_Project</fullName>
    <active>true</active>
    <description>Record Type to track Non-Billable time spent on Billable Customer Projects. Always Time Credited which contributes to Productive Utilization.</description>
    <label>NonBillable (Customer Project)</label>
</RecordType>