unpackaged/main/default/objects/pse__Assignment__c/recordTypes/Time_Credited_Internal_Initiative.recordType-meta.xml
<RecordType>
    <fullName>Time_Credited_Internal_Initiative</fullName>
    <active>true</active>
    <description>Record Type for Assignments on Internal PS Initiatives. Always Time Credited which contributes to Productive Utilization. Can be included in Financials to track costs incurred. Examples: Scoping/Pre-Sale, Tech Summit, Employee Training.</description>
    <label>Time Credited (Internal Initiative)</label>
</RecordType>