unpackaged/main/default/objects/pse__Assignment__c/validationRules/Assignment_Start_Not_Before_Proj_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Start_Not_Before_Proj_Start</fullName>
    <active>true</active>
    <description>Assignment Start Date should not be before the Project Start Date.</description>
    <errorConditionFormula>AND(
pse__Schedule__r.pse__Start_Date__c &lt;  pse__Project__r.pse__Start_Date__c,
 CONTAINS(pse__Project__r.pse__Region__r.Name, "Federal"))</errorConditionFormula>
    <errorMessage>Assignment Start Date should not be before the Project Start Date.</errorMessage>
</ValidationRule>