unpackaged/main/default/objects/pse__Assignment__c/validationRules/Restrict_Assignment_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Assignment_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
$Permission.Restrict_Assignment_Creation,
pse__Project__r.pse__Region__r.Name  &lt;&gt; 'Global Rollup')</errorConditionFormula>
    <errorMessage>PS Consulting Managers will not have permissions to create an Assignment</errorMessage>
</ValidationRule>