unpackaged/main/default/objects/pse__Assignment__c/listViews/Employee_Training.listView-meta.xml
<ListView>
    <fullName>Employee_Training</fullName>
    <columns>NAME</columns>
    <columns>Resource_Full_Name__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Scheduled_Hours__c</columns>
    <columns>pse__Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project__c</field>
        <operation>equals</operation>
        <value>Employee Training</value>
    </filters>
    <filters>
        <field>pse__End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Employee Training</label>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Consulting_Mgmt_APCJ</group>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Consulting_Mgmt_JAPAN</group>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_APCJ</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
    </sharedTo>
</ListView>