unpackaged/main/default/objects/pse__Assignment__c/listViews/psaws__My_Active_Assignments.listView-meta.xml
<ListView>
    <fullName>psaws__My_Active_Assignments</fullName>
    <columns>NAME</columns>
    <columns>pse__Role__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>psaws__Is_Resource_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Closed_for_Time_Entry__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>My Active Assignments</label>
</ListView>