unpackaged/main/default/objects/pse__Assignment__c/listViews/SO_7081668_Webscale_5_17_21.listView-meta.xml
<ListView>
    <fullName>SO_7081668_Webscale_5_17_21</fullName>
    <columns>PSA_Version__c</columns>
    <columns>Sales_Order_Number__c</columns>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Milestone__c</columns>
    <columns>pse__Planned_Hours__c</columns>
    <columns>pse__Scheduled_Hours__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Theater__c</field>
        <operation>equals</operation>
        <value>Americas</value>
    </filters>
    <filters>
        <field>Sales_Order_Number__c</field>
        <operation>equals</operation>
        <value>7081668</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>pse__Assignment__c.Assignment_Standard</value>
    </filters>
    <label>SO# 7081668: Webscale</label>
    <sharedTo>
        <group>PSA_Project_Mgmt_AMER</group>
    </sharedTo>
</ListView>